# prism

./: .gitignore  CHANGELOG.md  CLAUDE.md  LIMITATIONS.md  README.md  RELEASING.md  neti.py  prism.py  pyproject.toml  test_neti.py  test_prism.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml  test.yml
skills/prism/: SKILL.md
skills/prism-auto/: SKILL.md
skills/prism-check/: SKILL.md
