[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-think"
dynamic = ["version"]
description = "See how AI changes your thinking - before you realize it"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "keerti" },
]
keywords = ["ai", "thinking", "perspectives", "cognitive-bias", "measurement"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]

[project.optional-dependencies]
semantic = ["sentence-transformers"]

[project.urls]
Homepage = "https://github.com/kirti34n/prism"
Repository = "https://github.com/kirti34n/prism"

[project.scripts]
prism = "prism:_main"

[tool.setuptools]
py-modules = ["prism"]

[tool.setuptools.dynamic]
version = {attr = "prism.__version__"}
